feat!: install dotenv-cli & create env testing vars

--- a/.env.test
+++ b/.env.test
@@ -2,8 +2,7 @@ PORT=3001
 
 PUBLIC_PATH=public
 
-POSTGRES_URL=postgresql://postgres:123456@localhost:5432/TODO
-# POSTGRES_URL=postgresql://postgres:b6ac-G4fb5bdec-aFdaE1F-5-Fde-3G1@roundhouse.proxy.rlwy.net:50322/railway
+POSTGRES_URL=postgresql://andres19r:m2OjBZ9oUcML@ep-silent-fog-56186119.us-east-2.aws.neon.tech/neondb?sslmode=require
 POSTGRES_USER=postgres
 POSTGRES_DB=TODO
 POSTGRES_PORT=5432
